# Go-Board-Game

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Go-Board-Game.vcxproj  Makefile  README.md  README.txt  Text File  docker-compose.yaml  main.cpp
.github/workflows/: main.yml
Glew and Glut/DevIL/: README.txt
Glew and Glut/DevIL/include/IL/: ilut_config.h
Glew and Glut/DevIL/lib/: libIL.la  libILU.la  libILUT.la  libILUT.so.1.1.0
Glew and Glut/DevIL/lib/pkgconfig/: IL.pc  ILU.pc  ILUT.pc
Glew and Glut/DevIL/share/info/: DevIL_manual.info
scripts/: install_dependencies.sh  run_lint.sh
src/game/: Board.cpp  Board.h  GameSession.cpp  GameSession.h  GameState.cpp  GameState.h  GroupAnalyzer.cpp  GroupAnalyzer.h  Move.h  MoveValidator.cpp  MoveValidator.h  Rules.cpp  Rules.h
src/graphics/: Lights.cpp  Lights.h  Meshes.cpp  Meshes.h  Renderer.cpp  Renderer.h
src/input/: InputRouter.cpp  InputRouter.h
tests/: move_validator_tests.cpp  rules_tests.cpp  test_placeholder.cpp
